# personal

./: .pre-commit-config.yaml  CMakeLists.txt  LemonadeStand.py  LemonadeStandTester.py  MenuItem.py  README.md  SalesForDay.py  requirements.txt
.github/workflows/: sonarqube.yml
lesson_projects/: LemonadeStand.py  LemonadeStandTester.py  MenuItem.py  SalesForDay.py
projects/python_projects/: utils.py
tests/: CMakeLists.txt
tests/c++_tests/trading_interview/: CMakeLists.txt  test_arithmetic_mean.cpp
tests/python_tests/hackerrank/problem_solving/algorithms/easy/: test_between_two_sets.py  test_breaking_records.py
tests/python_tests/hackerrank/problem_solving/algorithms/medium/: test_forming_a_magic_square.py
tests/python_tests/miscellaneous/: test_net_salary_calculator.py
tests/python_tests/trading_interview/assignments/: test.txt  test_drawing_a_blue.py  test_get_words_with_all_vowels.py  test_largest_number.py  test_longest_common_prefix.py  test_missing_number.py  test_pairs_with_sum.py  test_smallest_string_by_removing_one_letter.py  test_sorting_without_sort.py  test_subarray_sum_equals_zero.py  test_sudoku.py  test_word_frequency.py  test_word_frequency_text.txt  test_words_with_all_vowels.py  test_words_with_consecutive_letters.py
tests/python_tests/trading_interview/assignments/cases/text_file_exists/: word_frequency_output.json
tests/python_tests/trading_interview/assignments/data/: filtered_text.txt  word_frequency_output.txt
tests/trading_interview/test_assignments/: test_largest_number.py  test_smallest_string_by_removing_one_letter.py
(+44 files in other folders)
